V 1.0 - Now playable - Graveyard and exile now viewable. - Commander now playable - Remove card updated to only remove one, as is the likely use of the function - Added PlaySource enum to keep track of card origin - Added click event to MPDButton - Added sounds to signify shuffle and draw doing something - Added "Phase Out" to card slots - Added "Tap" to card slots - Implemented features for moving cards from card slot - Added ability to set alternate buttons for card control - Implemented card viewer - Added "Mulligan" button to view of initial hand - Added "Untap All" button to hand window - Added static method to windows to bring them to front - Added buttons to hand view controls - Moved PlayMat to windows folder

--- a/Controls/CardControl.xaml
+++ b/Controls/CardControl.xaml
@@ -69,7 +69,7 @@
                     <Label
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
-                        FontSize="30"
+                        FontSize="{Binding FontSize}"
                         Foreground="{DynamicResource FG1}"
                         FontFamily="{DynamicResource AppFont}"
                         Content="{Binding Path=TextContent}" 
