--- a/Controls/NumberPicker.xaml
+++ b/Controls/NumberPicker.xaml
@@ -43,12 +43,14 @@
             <ctrls:MPDButton
                 Grid.Row="0"
                 TextContent="🢁"
+                FontSize="14"
                 Click="Add"
             />
 
             <ctrls:MPDButton
                 Grid.Row="1"
                 TextContent="🢃"
+                FontSize="14"
                 Click="Subtract"
             />
         </Grid>
