--- a/Windows/CardViewer.xaml
+++ b/Windows/CardViewer.xaml
@@ -1,13 +1,86 @@
-﻿<Window x:Class="MTGProxyDesk.Windows.CardViewer"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MTGProxyDesk.Windows"
-        mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen"
-        Title="CardViewer" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+﻿<Window 
+    x:Class="MTGProxyDesk.Windows.CardViewer"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:MTGProxyDesk.Windows"
+    xmlns:ctrls="clr-namespace:MTGProxyDesk.Controls"
+    mc:Ignorable="d"
+    WindowStartupLocation="CenterScreen"
+    ResizeMode="CanMinimize"
+    Title="Card View" Height="700" Width="1000"
+>
+    <Window.Resources>
+        <Style x:Key="{x:Type ScrollBar}" TargetType="{x:Type ScrollBar}">
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="OverridesDefaultStyle" Value="true"/>
+            <Style.Triggers>
+                <Trigger Property="Orientation" Value="Horizontal">
+                    <Setter Property="Width" Value="Auto"/>
+                    <Setter Property="Height" Value="18" />
+                    <Setter Property="Template" Value="{DynamicResource HorizontalScrollBar}" />
+                </Trigger>
+                <Trigger Property="Orientation" Value="Vertical">
+                    <Setter Property="Width" Value="18"/>
+                    <Setter Property="Height" Value="Auto" />
+                    <Setter Property="Template" Value="{DynamicResource VerticalScrollBar}" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+
+    <Border 
+        Background="{DynamicResource DarkerGradient_Diag}" 
+        VerticalAlignment="Stretch"
+        HorizontalAlignment="Stretch"
+    >
+        <DockPanel>
+            <DockPanel DockPanel.Dock="Top">
+                <ctrls:MPDButton
+                    DockPanel.Dock="Right"  
+                    HorizontalAlignment="Right"
+                    TextContent="OK"
+                    Height="40"
+                    Width="80"
+                    VerticalContentAlignment="Center"
+                    Margin="10"
+                    Click="Accept"
+                />
+                <ctrls:MPDButton 
+                    DockPanel.Dock="Right" 
+                    HorizontalAlignment="Right"
+                    TextContent="Mulligan"
+                    Height="40"
+                    Width="80"
+                    VerticalContentAlignment="Center"
+                    Margin="10,10,0,10"
+                    Click="DoMulligan"
+                    x:Name="MulliganButton"
+                />
+            </DockPanel>
+            
+            <ScrollViewer
+                Margin="0"
+                Padding="0" 
+                VerticalScrollBarVisibility="Auto" 
+                HorizontalScrollBarVisibility="Disabled"
+                DockPanel.Dock="Bottom"
+            >
+                <Grid 
+                    Margin="50,0,50,50" 
+                    Name="ViewGrid" 
+                    VerticalAlignment="Stretch" 
+                    HorizontalAlignment="Stretch"
+                >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                </Grid>
+            </ScrollViewer>
+        </DockPanel>
+    </Border>
 </Window>
